<resources>
    <string name="app_name">PMIS</string>
    <string name="hintSearchStudent">Search Student</string>
    <string name="hintTeamName">Enter team name</string>
    <string name="hintProjectName">Enter project name</string>
    <string name="hintprojectId">Project ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_developer">Developer</string>
    <string name="nav_try_list">Try List</string>
    <string name="nav_seeting">Setting</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_about">About</string>
    <string name="nav_version">Version</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_logout">Logout</string>
</resources>