<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackgroundSecondaryColor"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="100dp"
        android:gravity="center"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_user_pic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/empty_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nav_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text=""
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@+id/nav_user_pic"
            app:layout_constraintTop_toTopOf="@+id/nav_user_pic" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navDeveloperTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/iconColor"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_developer"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_person_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navRateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/iconColor"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_rate_us"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_outline_star_rate_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="visible" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navAboutTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/iconColor"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_about"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_info_outline_white_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="visible" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navLogoutTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/iconColor"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_logout"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_logout_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/iconColor"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_version"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_outline_app_shortcut_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="visible" />


        </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:gravity="bottom|center"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="18sp" />
</LinearLayout>